Compress users-background-img

--- a/join/home/templates/partials/people.html
+++ b/join/home/templates/partials/people.html
@@ -1,7 +1,7 @@
 {% load i18n static %}
 <section class="sec-padding section-light" style="padding-top: 17px">
   <div class="container-fluid">
-    <div class="parallax vertical-align" data-parallax-bg-image="{% static "images/users-background.png" %}" data-parallax-direction="down" data-parallax-speed="0.9">
+    <div class="parallax vertical-align" data-parallax-bg-image="{% static "images/users-background-min.png" %}" data-parallax-direction="down" data-parallax-speed="0.9">
       <div class="parallax-overlay bg-opacity-8">
         <div class="container sec-tpadding-3 sec-bpadding-3">
           <div class="row">
