--- a/join/static/css/join.css
+++ b/join/static/css/join.css
@@ -2,3 +2,12 @@
     padding-top: 0px;
     padding-bottom: 0px;
 }
+
+#people-block {
+    padding-top: 2px;
+}
+
+
+#people-sublock {
+    padding-top: 40px;
+}
