Tag and picture

--- a/join/home/templates/partials/participate.html
+++ b/join/home/templates/partials/participate.html
@@ -7,9 +7,8 @@
     <div class="row slide-controls-4">
       <div class="col-sm-12">
         <div class="sec-title-container text-center">
-          <h5 class="font-weight-4 less-mar-1 line-height-4 montserrat opacity-5">What our people and clients says</h5>
-          <h2 class="font-weight-6 less-mar-1 montserrat line-height-5">Our Customers and people Says<br/>
-            we deliver quality products </h2>
+          <h5 class="font-weight-4 less-mar-1 line-height-4 montserrat opacity-5">¿Tienes alguna inquietud con respecto a algún tema? Este es tu espacio para compartirlo, no temas a hacer preguntas, de eso se aprende</h5>
+          <h2 class="font-weight-6 less-mar-1 montserrat line-height-5">TU GENENIALIDAD VALE ORO, COMPARTILA<br></h2>
         </div>
       </div>
       <div class="clearfix"></div>
