--- a/join/project/templates/project/detail.html
+++ b/join/project/templates/project/detail.html
@@ -31,7 +31,7 @@
             <div class="carousel_holder">
               <div class="bg2-featurebox-6">
                 <div id="sync1" class="owl-carousel">
-                  <div class="item"><img src="http://via.placeholder.com/1000x900" alt="" class="img-responsive"></div>
+                  <div class="item"><img src="{{ project.get_primary_image_url }}" alt="" class="img-responsive"></div>
                   <div class="item"><img src="http://via.placeholder.com/1000x900" alt="" class="img-responsive"></div>
                   <div class="item"><img src="http://via.placeholder.com/1000x900" alt="" class="img-responsive"></div>
                   <div class="item"><img src="http://via.placeholder.com/1000x900" alt="" class="img-responsive"></div>
