min height for projects at home

--- a/join/home/templates/partials/projects.html
+++ b/join/home/templates/partials/projects.html
@@ -13,7 +13,7 @@
       <div class="col-md-3 col-sm-6 col-xs-12 margin-bottom">
         <div class="ce-feature-box-43">
           <div class="main-box">
-            <div class="img-box">
+            <div class="img-box" style="height: 343px;">
               <div class="overlay">
                 <p class="small-text text-center">{{ project.description }}</p>
                 <br/>
