--- a/join/project/templates/project/list.html
+++ b/join/project/templates/project/list.html
@@ -55,7 +55,7 @@
                 <h5 class="text-white">{{ project.title }}</h5>
                 <p class="text-light">{{ project.brief_description }}</p>
               </div>
-              <img src="http://via.placeholder.com/500x500" alt="" class="img-responsive"/>
+              <img src="{{ project.get_primary_image_url }}" alt="" class="img-responsive"/>
             </div>
         </div>
         {% endfor %}
